# plant-disease-visionops

./: .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py
app/: __init__.py  streamlit_app.py
configs/: baseline.yaml
reports/: baseline_cnn_results.json  baseline_cnn_results.md  data_audit.json  data_audit.md  experiment_comparison.json  experiment_comparison.md  final_project_summary.md  limitations.md  model_card.md  project_plan.md  reproducibility.md  resnet18_transfer_1ep_results.json  resnet18_transfer_1ep_results.md  resnet18_transfer_3ep_failures_brightness_decrease_s3.json  resnet18_transfer_3ep_failures_brightness_decrease_s3.md  resnet18_transfer_3ep_failures_clean.json  resnet18_transfer_3ep_failures_clean.md  resnet18_transfer_3ep_results.json  resnet18_transfer_3ep_results.md  resnet18_transfer_3ep_robustness.json  resnet18_transfer_3ep_robustness.md  robustness_comparison.json  robustness_comparison.md  split_summary.md
src/plant_disease_visionops/: __init__.py
src/plant_disease_visionops/data/: __init__.py  audit_dataset.py  dataset.py  discovery.py  inspect_batch.py  loaders.py  make_splits.py  prepare_raw_layout.py  raw_layout.py  splitting.py  transforms.py  validate_layout.py
src/plant_disease_visionops/evaluation/: __init__.py  analyze_failures.py  compare_experiments.py  compare_robustness.py  corruptions.py  evaluate_robustness.py  failure_analysis.py  metrics.py  model_loading.py  robustness.py
src/plant_disease_visionops/inference/: __init__.py  predict_image.py  predictor.py
src/plant_disease_visionops/models/: __init__.py  baseline_cnn.py  factory.py
src/plant_disease_visionops/training/: __init__.py  checkpointing.py  engine.py  experiment.py  reporting.py  reproducibility.py  train_baseline.py  train_experiment.py
tests/: test_dataset_audit.py  test_dataset_discovery.py  test_dataset_splitting.py  test_experiments.py  test_failure_analysis.py  test_imports.py  test_inference.py  test_pytorch_data.py  test_raw_layout.py  test_robustness.py  test_training.py
