[project]
name = "plant-disease-visionops"
version = "0.1.0"
description = "Computer vision training and monitoring system for plant disease classification."
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
]

[project.scripts]
audit-dataset = "plant_disease_visionops.data.audit_dataset:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
