[project]
name = "plant-disease-visionops"
version = "0.1.0"
description = "Computer vision training and monitoring system for plant disease classification."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.116",
    "matplotlib>=3.8,<4",
    "numpy>=1.24",
    "pillow>=10.0",
    "python-multipart>=0.0.9,<1",
    "scikit-learn>=1.4,<2",
    "streamlit>=1.32,<2",
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
    "uvicorn>=0.27,<1",
]

[project.scripts]
audit-dataset = "plant_disease_visionops.data.audit_dataset:main"
analyze-failures = "plant_disease_visionops.evaluation.analyze_failures:main"
compare-experiments = "plant_disease_visionops.evaluation.compare_experiments:main"
compare-robustness = "plant_disease_visionops.evaluation.compare_robustness:main"
evaluate-robustness = "plant_disease_visionops.evaluation.evaluate_robustness:main"
inspect-batch = "plant_disease_visionops.data.inspect_batch:main"
make-splits = "plant_disease_visionops.data.make_splits:main"
predict-image = "plant_disease_visionops.inference.predict_image:main"
prepare-raw-layout = "plant_disease_visionops.data.prepare_raw_layout:main"
train-baseline = "plant_disease_visionops.training.train_baseline:main"
train-experiment = "plant_disease_visionops.training.train_experiment:main"
validate-layout = "plant_disease_visionops.data.validate_layout:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
